--- a/style.css
+++ b/style.css
@@ -58,7 +58,9 @@ a.active,a:hover{
 @media (max-width: 952px){
 	label.logo{
 		font-size: 30px;
-		padding-left: 50px;
+		padding: 3px;
+		margin-left: 14px;
+		
 	}
 
 nav ul li a{
@@ -133,9 +135,56 @@ nav ul li a{
 	transition: 1s;
 }
 @media(max-width: 700px){
+	
 	.text-box h1{
 		font-size: 20px;
+		margin-right: 20px;
+		margin-top: -214px;
 	}
+	.text-box p{
+		margin: 10px 0 40px;
+		font-size: 14px;
+		color: #fff;
+	}
+	.hero-btn{
+		display: flex;
+		text-decoration: none;
+		color: #fff;
+		border: 1px solid;
+		padding: 12px 34px;
+		font-size: 13px;
+		position: relative;
+		cursor: pointer;
+		margin-top: -30px;
+	}
+	.row{
+		margin-top: 5%;
+		display: flex;
+		justify-content: space-between;
+	}
+	.foods-col{
+		flex-basis: 31%;
+		background: #fff3f3;
+		border-radius: 10px;
+		margin-bottom: 5%;
+		padding: 20px 12px;
+		box-sizing: border-box;
+		transition: 0.5s;
+	}
+	h3{
+		text-align: center;
+		font-weight: 600;
+		margin: 10px 0;
+	}
+	p{
+		color: #777;
+		font-size: 14px;
+		font-weight: 300;
+		line-height: 22px;
+		padding: 10px;	
+		margin-right: -20px;
+	}
+	
 }
 
 	.about{
