--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ a.active,a:hover{
 		font-size: 30px;
 		padding: 3px;
 		margin-left: 14px;
+
 	}
 
 nav ul li a{
@@ -146,7 +147,7 @@ nav ul li a{
 		color: #fff;
 	}
 	.hero-btn{
-		display: flex;
+		display: block;
 		text-decoration: none;
 		color: #fff;
 		border: 1px solid;
@@ -155,6 +156,7 @@ nav ul li a{
 		position: relative;
 		cursor: pointer;
 		margin-top: -30px;
+		text-align: center;
 	}
 	.row{
 		margin-top: 5%;
@@ -216,6 +218,59 @@ nav ul li a{
 		padding: 20px 12px;
 		box-sizing: border-box;
 		transition: 0.5s;
+	}
+	
+	
+	.items{
+		display: grid;
+		grid-row-gap: 30px;
+		flex-basis: 31%;
+		padding: 30px 20px;
+	}
+	.item img{
+		border-radius: 10px;
+		width: 100%;
+		height: 500px;
+		object-fit: cover;
+		cursor: pointer;
+		transition: 0.2s ease;
+	}
+	.item img:hover{
+		transform: scale(1.04);
+	}
+	.item h6{
+		padding: 5px;
+		font-size: 14px;
+	}
+	.price{
+		margin-top: -12px;
+		margin-left: -16px;
+	}
+	.egg{
+		margin-top: -20px;
+		font-size: 12px;
+	}
+	.item button{
+		padding: 5px 30px;
+		border: none;
+		outline: none;
+		background-color: #0082e6;
+		color: white;
+		cursor: pointer;
+		border-radius: 4px;
+		margin: 0 auto;
+		display: block;
+	}
+	.item button:hover{
+		transform: scale(1.04);
+	}
+	@media(max-width: 700px) {
+		.item img{
+			width: 100%;
+			height: 100px;
+		}
+		
+		
 	}
 	h3{
 		text-align: center;
